# jiminy

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README  cmake_install.cmake  jiminy_client_automoc.cpp  surf_Q.m  test.txt
UML/: class_diagram.uxf
jiminy_client_automoc.dir/: moc_MainWindow_L4KGVI47OSQPU7.cpp  moc_OpenGLWidget_HVTKEZAKOJJVNK.cpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/client/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Makefile  OpenGLWidget.cpp  OpenGLWidget.h  cmake_install.cmake  main.cpp
src/common/: CMakeLists.txt  Console.hpp  DebugTools.cpp  DebugTools.h  Makefile  Singleton.h  cmake_install.cmake  empty.cpp
src/server/: Animal.cpp  Animal.h  Brain.cpp  Brain.h  Brain.hpp  Brain_ContinuousQLearning.cpp  Brain_ContinuousQLearning.hpp  Brain_DiscretQLearning.cpp  Brain_DiscretQLearning.hpp  CMakeLists.txt  Commander.cpp  Commander.h  Constraint.cpp  Constraint.h  DebugDraw.cpp  DebugDraw.hpp  DebugDrawer.cpp  DebugDrawer.h  Drawable.h  Entity.cpp  Entity.h  Entity.hpp  Limb.cpp  Limb.h  Limb.hpp  Makefile  MouseJointCallback.cpp  MouseJointCallback.hpp  NetServer.cpp  NetServer.h  Network.cpp  Network.hpp  Physical3DPrimitive.cpp  Physical3DPrimitive.h  PhysicalCuboid.cpp  PhysicalCuboid.h  PhysicalManager.cpp  PhysicalManager.h  PhysicalOwner.cpp  PhysicalOwner.h  (+15 more)
testsFilRouge/client/: .Makefile.un~  ExecutezMoi  Makefile  Makefile~  Shape.h  client.cpp  client.h
testsFilRouge/server/: .Makefile.un~  ExecutezMoi  Makefile  Makefile~  Server.cpp  Server.h  Shape.h  main.cpp  server.cpp  server.h
